# scientific_methods_in_physics

./: README.md  iris.cpp
iris/: CMakeLists.txt  iris.cpp  iris.ipynb  iris_functions.cpp  iris_functions.h  iris_main.cpp  iris_model.cpp  iris_model.h  popularity_vs_similarity_hyperb.ipynb
iris/data/: a.data  a.txt  b.data  b.txt  b_all.data  c.data  c.txt  c_all.data  d.data  d.txt  d_all.data  iris.data  iris_modif.data  y.data  y.txt
iris/python/: iris.ipynb
newtons_method_hw1/: CMakeLists.txt  main.cpp
numerical_deriv_hw4/: main.cpp  newton_RK_analytical_results_delta_t.txt
numerical_int_hw3/: CMakeLists.txt  main.cpp  numerical_int_results.txt
vectorclass_hw2/: CMakeLists.txt  main.cpp  vector2.h
